# sga

./: .gitignore  .gitmodules  Doxyfile
src/: .gitignore  CMakeLists.txt  Makefile.am  autogen.sh  config.h.cmake.in  configure.ac  get-dir-version  libtool
src/Algorithm/: CMakeLists.txt  ConnectProcess.h  ErrorCorrectProcess.cpp  ExtensionDP.h  HaplotypeBuilder.h  KmerOverlaps.h  LRAlignment.cpp  LRAlignment.h  Makefile.am  OverlapTools.h  VariationBuilderCommon.h
src/BFTrim/: BFTrim-omp.cpp  BFTrim.cpp  CMakeLists.txt  Util.h  any_converter.hpp  kmer_gen.hpp  logger.hpp  pfor.hpp  ptree.hpp  shortcuts.hpp  test-kmer_gen.cpp  variables_map_converter.hpp
src/Bigraph/: Bigraph.cpp  CMakeLists.txt  Makefile.am
src/Concurrency/: CMakeLists.txt  Makefile.am  SequenceProcessFramework.h
src/Dev/: Allele.hpp  Allele_Anchor.cpp  Allele_Anchor.hpp  Allele_Cont.cpp  Allele_Cont.hpp  Allele_Idx.hpp  Allele_Idx_Cont.hpp  Allele_Specifier.hpp  Anchor_Support.cpp  Anchor_Support.hpp  CLI.cpp  CLI.hpp  CMakeLists.txt  Cigar.cpp  Cigar.hpp  Cigar_Op.hpp  Contig_Entry.cpp  Contig_Entry.hpp  Contig_Entry_Cont.hpp  DNA_Sequence.hpp  Directed_Set.hpp  Graph.cpp  Graph.hpp  HACKING.org  Hap_Entry.hpp  Hap_Entry_Cont.hpp  Hap_Hop.hpp  Hap_Hop_List.hpp  Hap_Hop_Set.hpp  Hap_Map.cpp  Hap_Map.hpp  Hap_Tree.cpp  Hap_Tree.hpp  Log.cpp  Log.hpp  MAC.cpp  MAC.hpp  MAC_explicit_instantiations.cpp  MAC_forward.hpp  MAC_sets.hpp  (+111 more)
src/Dev/scripts/: display-stats.r  dna-distance-one  get-basic-stats  get-basic-stats-components  get-components-stats  get-degree-stats  get-n50  get-neighbours  get_active_ptr_addresses  mac-from-asqg  mac-from-asqg.make  mac-from-mac  mac-from-mac.make  stats-to-graph  stats-to-graph.old  supercontig-lengths
src/Dev/test_graphs/: test-real.000.asqg  test.000.asqg  test.001.asqg  test.002.asqg  test.003.asqg  test.004.asqg  test.005.asqg  test.006.asqg  test.007.asqg  test.008.asqg
src/Dev/zoo/: bgl.cpp  bgl2.cpp  test-Read_Chunk.cpp  test-ptree.cpp  test-ref-iterator.cpp  test-ref-range.cpp
src/GraphDiff/: CMakeLists.txt  DindelUtil.h  HapgenUtil.h  Makefile.am
src/SGA/: .gitignore  CMakeLists.txt  Makefile.am  OverlapCommon.h  connect.cpp  overlap-long.cpp  preqc.cpp  sga.cpp
src/SQG/: ASQG.cpp  ASQG.h  CMakeLists.txt  Makefile.am  SQG.h
src/Scaffold/: CMakeLists.txt  Makefile.am  ScaffoldAlgorithms.h  ScaffoldSearch.h  ScaffoldVisitors.h
src/StringGraph/: CMakeLists.txt  Makefile.am  RemovalAlgorithm.h  SGAlgorithms.cpp  SGAlgorithms.h  SGSearch.h  SGUtil.cpp  SGUtil.h
src/SuffixTools/: BWTAlgorithms.h  BWTCABauerCoxRosone.h  BWTCARopebwt.h  BWTReader.h  CMakeLists.txt  Makefile.am  STCommon.h
src/Util/: Alphabet.h  Basic_Serializer.hpp  BitVector.cpp  BitVector.h  BloomFilter.cpp  BloomFilter.h  CMakeLists.txt  Makefile.am  RC_Sequence.hpp  StdAlnTools.h  Util.cpp  Util.h  VCFUtil.h  algorithm_extra.hpp  filter_cont.hpp  for_each_advance.hpp  global_assert.hpp  ixstream.hpp  logger.hpp  min_max_of.hpp  pfor.hpp  sample-logger.cpp  sample-pfor.cpp  shortcuts.hpp  test-ixstream.cpp  type_traits_extra.hpp
src/cmake/Modules/: FindBamTools.cmake  FindHoard.cmake  FindJEMalloc.cmake  FindSeqAnLib.cmake  FindSparseHash.cmake  FindTCMalloc.cmake
src/upstream-patches/: 0001-upstream-fix-explicitly-include-omp-header.patch  0001-upstream-fix-only-integral-static-consts-can-be-init.patch  0001-upstream-fix-pedantic-warnings.patch  0001-upstream-fix-typo.patch
